--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "axios": "^0.21.1",
-    "betabotz-tools": "^1.0.0"
+    "axios": "^0.21.1"
   },
   "engines": {
     "node": ">=12.0.0"
